# hack-princeton-2025

./: .gitignore  README.md  package-lock.json
backend/: compute_stub.py  llm_autocorrect.py  main.py  pyproject.toml  sample_modal.py
compute/: main.py  register_modal_functions.sh
compute/character_classification_service/: fastapi_server.py  pyproject.toml  register_modal_functions.py
compute/wasl/: .gitignore  pyproject.toml  run.py
expo-frontend/: .env  package-lock.json  package.json  pnpm-lock.yaml
expo-frontend/app/: camera.tsx
expo-frontend/app/(tabs)/: explore.tsx  index.tsx
expo-frontend/components/: CameraStream.tsx  QuizCameraStream.tsx
infra/: README.md  docker-compose.yml  generate_cert.sh  nginx.conf  start.sh
infra/ssl/: cert.pem  key.pem
