[project]
name = "wasl"
version = "0.1.0"
description = ""
authors = [
    {name = "Shayan-P",email = "shayanpardis82@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "transformers (>=4.50.3,<5.0.0)",
    "mediapipe (>=0.10.21,<0.11.0)",
    "torchvision (>=0.21.0,<0.22.0)",
    "torchaudio (>=2.6.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
